samples/_failures_safe/1761421711_5f1c60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40bb9187.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_40bb9187.c:163:5: error: expected declaration or statement at end of input
  163 |     (*pos)++;
      |     ^
